force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/copadoAiHelper__Copado_AI_Companion_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Copado AI Companion Configuration</label>
    <pluralLabel>Copado AI Companion Configurations</pluralLabel>
</CustomObject>