force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__Allowed_Objects__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Allowed_Objects__c</fullName>
    <description>List of Object names (one per line) that are allowed to query, beside the Copado Objects.
E.g.
Case
Lead
Contact</description>
    <inlineHelpText>List of Object names (one per line) that are allowed to query, beside the Copado Objects.</inlineHelpText>
    <label>Allowed Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>