force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__Allows_Functions__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Allows_Functions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the OpenAI Model allows Function calls</description>
    <inlineHelpText>Set to true if the OpenAI Model allows Function calls</inlineHelpText>
    <label>Allows Functions</label>
    <type>Checkbox</type>
</CustomField>