force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__CopadoGPT_backend_URL__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__CopadoGPT_backend_URL__c</fullName>
    <description>By default, if this is empty, AI Companion will use the url of the named credential &quot;mc-backend&quot; (API Name mc_backend). You can set this field if a different URL is needed for your installation</description>
    <inlineHelpText>By default, if this is empty, AI Companion will use the url of the named credential &quot;mc-backend&quot; (API Name mc_backend). You can set this field if a different URL is needed for your installation</inlineHelpText>
    <label>CopadoGPT backend URL</label>
    <type>Url</type>
</CustomField>