force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Max_Tokens__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Max Tokens</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>