force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__OpenAI_Model__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__OpenAI_Model__c</fullName>
    <defaultValue>&quot;gpt-3.5-turbo&quot;</defaultValue>
    <description>ID of the AI model to use. Consult the Copado documentation to see all of the available models</description>
    <inlineHelpText>ID of the AI model to use. Consult the Copado documentation to see all of the available models</inlineHelpText>
    <label>Copado AI Model</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>