force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt/fields/copadoAiHelper__OpenAI_Temperature__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__OpenAI_Temperature__c</fullName>
    <defaultValue>0.7</defaultValue>
    <description>What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</description>
    <inlineHelpText>What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</inlineHelpText>
    <label>OpenAI Temperature</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>